Fix Blu-ray media sizes in fill widget are incorrect issue.

A patch by Henryk Hecht!

Thank you! I am better now :) I will fix my Cerebral vasospasm issue,
and take ultrasonography consultation this afternoon.

Reviewed By: Thomas Schmitt

BUG: 383211